
SVN
-------------------------------

XML:   Resolved issue CASTOR-1586 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed error loading mapping whem migrating from 1.0.1 to 1.0.3.
       Details: http://jira.codehaus.org/browse/CASTOR-1586
       (Ralf - 20061016)

XML:   Resolved issue CASTOR-1626 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added Code generation sample to HTML documentation.
       Details: http://jira.codehaus.org/browse/CASTOR-1626
       (Werner - 20061016)

JDO:   Resolved issue CASTOR-1621 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: JDBC 3.0.
       Details: http://jira.codehaus.org/browse/CASTOR-1621
       (Ralf - 20061016)

XML:   Resolved issue CASTOR-1625 using contribution from Rainer Montag [rmontag@hrzpub.tu-darmstadt.de]
       Added checks to DateTimeBase.setCentury() for (invalid) year 0.
       Details: http://jira.codehaus.org/browse/CASTOR-1625
       (Werner - 20061016)

XML:   Resolved issue CASTOR-385 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source Generator uses the name "Content" which conflicts with any element
       named "Content."
       Details: http://jira.codehaus.org/browse/CASTOR-385
       (Edward - 20061015)

All:   Resolved issue CASTOR-1584 using contribution from Steven Dolg [stevendolg@gmx.at]
       Refactored AbstractMappingLoader.
       Details: http://jira.codehaus.org/browse/CASTOR-1584
       (Ralf - 20061015)

XML:   Resolved issue CASTOR-416 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Source generator now overloads resetValues() on XMLFieldHandler for mutli-valued properties.
       Details: http://jira.codehaus.org/browse/CASTOR-416
       (Werner - 20061015)

XML:   Resolved issue CASTOR-482 using contribution from Werner Guttmann [werner.guttmann@gmx.net]